[project]
name = "workload-runner"
version = "0.1.0"
description = "Lightweight Impala workloads runner that polls S3 for prompt files and streams results back."
requires-python = ">=3.9"
dependencies = [
    "boto3==1.40.19",
    "requests==2.32.5",
    "aiohttp==3.12.15",
    "aioboto3==13.4.0",
    "tqdm==4.67.1",
    "kubernetes==33.1.0",
    "transformers==4.55.4",
    "impalaai",
]
readme = "README.md"

[project.optional-dependencies]
test = [
    "moto[boto3]==5.1.11",
]
dev = [
    "boto3-stubs[all]==1.40.18",
    "types-aioboto3[all]==13.4.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "INTERNAL", "FIRSTPARTY", "LOCALFOLDER"]
known_internal = ["impala"]


[project.scripts]
workload-runner = "workload_runner.main:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
